@@ -49,6 +49,7 @@
 # autologin-user = User to log in with by default (overrides autologin-guest)
 # autologin-user-timeout = Number of seconds to wait before loading default user
 # autologin-session = Session to load for automatic login (overrides user-session)
+# exit-on-failure = True if the daemon should exit if this seat fails
 #
 [SeatDefaults]
 #xserver-command=X
@@ -71,6 +72,7 @@
 #autologin-user=
 #autologin-user-timeout=0
 #autologin-session=UNIMPLEMENTED
+#exit-on-failure=false
 
 #
 # Seat configuration
