@@ -44,6 +44,7 @@ typedef struct
     gboolean (*switch_to_user)(Display *display, User *user);
     gboolean (*switch_to_guest)(Display *display);
     gchar *(*get_guest_username)(Display *display);
+    gboolean (*start_display_server)(Display *display);
     gboolean (*start_greeter)(Display *display);
     gboolean (*start_session)(Display *display);
     void (*stopped)(Display *display);
@@ -74,6 +75,8 @@ void display_set_hide_users_hint (Display *display, gboolean hide_users);
 void display_set_user_session (Display *display, const gchar *session_name);
 
 gboolean display_start (Display *display);
+
+gboolean display_get_is_ready (Display *display);
 
 void display_unlock (Display *display);
 
