@@ -1,5 +1,5 @@
-[test-xserver-config]
-return-value=1
+[LightDM]
+start-default-seat=false
 
 [test-plymouth-config]
 enabled=true
