@@ -1,38 +1,0 @@
-#
-# Check Plymouth quits when the X server fails to start.
-#
-
-RUNNER DAEMON-START
-
-# Check if Plymouth is running
-PLYMOUTH PING ACTIVE=TRUE
-PLYMOUTH HAS-ACTIVE-VT=TRUE
-PLYMOUTH DEACTIVATE
-
-# X server fails to start
-XSERVER :50 START
-XSERVER :50 EXIT CODE=1
-
-# Plymouth quits
-PLYMOUTH QUIT RETAIN-SPLASH=FALSE
-
-# X server starts again
-XSERVER :50 START
-XSERVER :50 INDICATE-READY
-
-# LightDM connects to X server
-XSERVER :50 ACCEPT-CONNECT
-
-# Greeter starts
-GREETER START
-XSERVER :50 ACCEPT-CONNECT
-GREETER CONNECT-XSERVER :50
-GREETER CONNECT-TO-DAEMON
-GREETER CONNECTED-TO-DAEMON
-
-# Cleanup
-*STOP-DAEMON
-# Don't know what order they will terminate
-(GREETER TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
-(GREETER TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
-RUNNER DAEMON-EXIT STATUS=0
