@@ -7,23 +7,5 @@ RUNNER DAEMON-START
 XSERVER :50 START
 XSERVER :50 EXIT CODE=1
 
-# X server starts again
-XSERVER :50 START
-XSERVER :50 INDICATE-READY
-
-# LightDM connects to X server
-XSERVER :50 ACCEPT-CONNECT
-
-# Greeter starts
-GREETER START
-XSERVER :50 ACCEPT-CONNECT
-GREETER CONNECT-XSERVER :50
-GREETER CONNECT-TO-DAEMON
-GREETER CONNECTED-TO-DAEMON
-
-# Cleanup
-*STOP-DAEMON
-# Don't know what order they will terminate
-(GREETER TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
-(GREETER TERMINATE SIGNAL=15|XSERVER :50 TERMINATE SIGNAL=15)
-RUNNER DAEMON-EXIT STATUS=0
+# Daemon stops with error
+RUNNER DAEMON-EXIT STATUS=1
