@@ -5,6 +5,7 @@ Overview of changes in lightdm 0.9.5
     * Add display-setup, session-setup and session-cleanup scripting hooks
     * Fix cancel button in GTK greeter
     * Fix line through GTK greeter menu items
+    * Exit daemon if a seat fails which has exit-on-failure set to true
 
 Overview of changes in lightdm 0.9.4
 
